_old/compiler/src/test/resources/errors/todo/incorrect_support_direction.jd
justification reverse_dir {
    conclusion c is "conclusion"
    evidence Su1 is "Evidence 1"
    strategy St1 is "Strategy 1"
    St1 supports C
    St1 supports Su1  // Typically, evidence supports strategy, not the other way around
}
